# fastssv

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  mkdocs.yml  prek.toml  pyproject.toml  test.sql  zensical.toml
.agents/: README.md
.agents/skills/add-rule/: SKILL.md
.claude/: README.md
.claude/skills/: add-rule
.github/workflows/: docs.yml  ghcr-build-push.yml  publish.yml  tests.yml
deploy/: .dockerignore  .env.example  Dockerfile  docker-compose.yml
docs/: API.md  JSON_OUTPUT.md  LOGGING.md  PLUGIN_ARCHITECTURE.md  RULES_REFERENCE.md  SEMANTIC_RULES_GUIDE.md  api.md  architecture.md  index.md  json_output.md  logging.md  mcp.md  plugin_architecture.md  rules_reference.md  semantic_rules_guide.md
examples/: logging_demo.py
output/: README.md
rules/: claude_opus_4_6_rules.json  omop_additional_rules.json  omop_extended_rule_pack.json
scripts/: dataset_fetch.py  export_to_sql.py  visualize_schema.py
src/fastssv/: __init__.py  __main__.py  cli.py  fixer.py
src/fastssv/api/: __init__.py  _validation.py  app.py  config.py  models.py  ratelimit.py  routes.py  ui.py
src/fastssv/api/static/: prism-json.min.js  sql-editor.js  style.css
src/fastssv/api/templates/: base.html  index.html  rules.html
src/fastssv/core/: base.py  deduplication.py  helpers.py  logging.py  omop_schema.py  patch.py  registry.py  rule_layer.py  validation_context.py
src/fastssv/mcp/: __init__.py  server.py
src/fastssv/rules/: README.md  __init__.py
src/fastssv/rules/analytics/: __init__.py  division_by_zero_risk.py  integer_division_precision_loss.py  percentile_methodology.py
src/fastssv/rules/anti_patterns/: __init__.py  ambiguous_column_reference.py  attribute_definition_invalid_join.py  cdm_source_clinical_join.py  comma_separated_cross_join.py  concept_ancestor_mixed_with_concept_relationship_redundantly.py  concept_class_table_join_uses_concept_class_id_string.py  concept_code_requires_vocabulary_id.py  concept_lookup_context.py  concept_name_lookup.py  concept_relationship_missing_relationship_filter.py  concept_relationship_transitive_misuse.py  cte_shadows_omop_table.py  destructive_operations_on_clinical_tables.py  domain_table_join_uses_domain_id_string.py  duplicate_column_alias.py  having_without_group_by.py  join_key_validation.py  limit_without_order_by.py  metadata_clinical_join.py  no_distinct_on_primary_key_column.py  no_string_identification.py  null_comparison_operator.py  singleton_metadata_clinical_join.py  sql_server_functions_in_postgres.py  standard_concept_or_with_classification.py  top_as_synthetic_data.py  type_concept_id_domain_filter.py  type_concept_id_misuse.py  vocabulary_table_join_uses_vocabulary_id_string.py
src/fastssv/rules/concept_standardization/: __init__.py  concept_ancestor_cross_domain_validation.py  concept_ancestor_max_levels_misuse.py  concept_ancestor_rollup_direction.py  concept_ancestor_self_include_redundancy.py  concept_class_id_ingredient_for_drug_grouping.py  concept_domain_validation.py  concept_relationship_valid_date_range_check.py  concept_synonym_language_concept_id.py  domain_segregation.py  domain_vocabulary_validation.py  era_table_standard_concepts.py  hierarchy_expansion.py  invalid_reason_enforcement.py  maps_to_chain_follow_to_terminal.py  maps_to_target_standard_validation.py  multiple_maps_to_targets.py  source_concept_id_standard_filter.py  source_concept_id_warning.py  source_to_concept_map_validation.py  standard_concept_enforcement.py  standard_concept_value_validation.py  unit_vocabulary_validation.py
src/fastssv/rules/data_quality/: __init__.py  canonical_string_value_validation.py  clinical_event_date_before_1900_validation.py  column_type_validation.py  comprehensive_schema_validation.py  concept_class_id_case_sensitivity.py  concept_id_string_comparison.py  concept_name_whitespace.py  condition_occurrence_stop_reason_is_free_text.py  domain_id_case_sensitivity.py  drug_exposure_lot_number_is_free_text.py  episode_requires_concept_filter.py  fact_relationship_no_self_reference.py  fact_relationship_requires_relationship_concept_filter.py  fact_relationship_valid_concepts.py  free_text_column_misuse.py  incorrect_percentile_calculation.py  location_state_zip_not_joined_to_concept.py  negative_concept_id_validation.py  non_standard_date_literal_format.py  note_nlp_nlp_date_for_temporal_filtering.py  note_nlp_offset_is_character_position.py  note_nlp_term_modifiers_is_free_text.py  null_grouping_handling.py  schema_validation.py  source_value_field_usage.py  standard_concept_null_handling.py  union_concept_id_domain_indicator.py  union_vs_union_all_clinical_events.py  unmapped_concept_handling.py  vocabulary_id_case_sensitivity.py  vocabulary_table_protection.py
src/fastssv/rules/domain_specific/: __init__.py  cost_currency_concept_id.py  cost_paid_ingredient_cost_drug_specific.py  dose_era_cross_unit_comparison.py  event_cardinality_validation.py  event_field_polymorphic_resolution.py
src/fastssv/rules/joins/: __init__.py  care_site_id_join_validation.py  care_site_join_validation.py  care_site_location_join_validation.py  clinical_person_id_linkage_validation.py  clinical_pk_cross_join_validation.py  clinical_visit_detail_join_validation.py  cohort_clinical_join_validation.py  concept_alias_reuse_validation.py  concept_ancestor_name_resolution_validation.py  concept_concept_class_join_validation.py  concept_domain_join_validation.py  join_path_validation.py  (+25 more)
src/fastssv/schemas/: __init__.py  cdm_column_types.py  cdm_columns.py  cdm_schema.py  concept_class_id_canonical.py  semantic_schema.py
tasks/: IMPLEMENTATION_STATUS.md  omop_rules.json
tests/: test_cli.py  test_deduplication.py  test_helpers_cte.py  test_integration.py  test_parse_sql.py  test_patch.py  test_rules.py  test_schema_consistency.py  test_semantic_validation.py  test_strict_mode.py  test_vocabulary_validation.py
tests/api/: test_api.py  test_cli_serve.py  test_config.py  test_docker_smoke.py  test_mcp.py  test_ui.py
(+93 files in other folders)
