[project]
name = "fastssv"
version = "0.2.0"
description = "Fast Semantic Static Validator - A semantic validation framework for OMOP CDM SQL queries"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
	{name = "FastSSV contributors"},
]
keywords = ["omop", "sql", "validation", "static-analysis", "cdm"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Topic :: Database",
	"Topic :: Software Development :: Quality Assurance",
]
dependencies = [
	"sqlglot>=24.6.0",
]

[project.urls]
Homepage = "https://github.com/fastomop/fastSSV"
Repository = "https://github.com/fastomop/fastSSV"
Issues = "https://github.com/fastomop/fastSSV/issues"

[project.scripts]
fastssv = "fastssv.cli:main"

[project.optional-dependencies]
dev = [
	"pytest>=9.0.3",
	"pytest-cov>=6.0",
	"httpx>=0.27",
]
viz = [
	"matplotlib>=3.7",
	"networkx>=3.3",
]
langfuse = [
	"dotenv>=0.9.9",
	"langfuse>=3.12.1",
]
docs = [
	"zensical>=0.0.39",
	"pymdown-extensions>=10.7",
]
api = [
	"fastapi>=0.115",
	"uvicorn[standard]>=0.30",
	"gunicorn>=22.0",
	"slowapi>=0.1.9",
	"pydantic-settings>=2.5",
	"jinja2>=3.1",
	"python-multipart>=0.0.9",
]

[build-system]
requires = ["uv_build>=0.9,<0.10"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "fastssv"
module-root = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
# Measure the installed package (editable or wheel). `source_pkgs` is robust
# to both layouts; `branch = true` measures branch coverage on top of lines.
source_pkgs = ["fastssv"]
branch = true
omit = [
	"*/__pycache__/*",
	"tests/*",
]

[tool.coverage.report]
# Lines that genuinely can't be exercised at runtime — don't count them.
exclude_also = [
	"raise NotImplementedError",
	"if __name__ == .__main__.:",
	"if TYPE_CHECKING:",
	"pragma: no cover",
	"@(abc\\.)?abstractmethod",
]
skip_covered = false
precision = 1
# CI floor — below this, the coverage job fails. Baseline combined
# line+branch coverage is ~81.5%; the floor sits a few points below to
# absorb minor test-set fluctuations without breaking CI on noise.
fail_under = 79

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["build", "dist", ".venv", "tests/test_rules.py"]

[tool.ruff.lint]
# Start conservative: flake8 pyflakes, basic pycodestyle errors,
# unused imports. Expand after the codebase is clean.
select = ["E", "F", "W"]
ignore = [
	"E501",  # line-too-long (we set line-length but many existing lines exceed)
	"E741",  # ambiguous variable name 'l', 'I' — existing style
	"E402",  # module-level import not at top — intentional in __init__.py
	         # and category modules to avoid circular imports
	"F841",  # unused local variable — some rules build WIP regex/match
	         # variables that are not yet wired up; kept for future work
]

[tool.ruff.lint.per-file-ignores]
# __init__.py imports submodules to trigger @register decorators;
# the modules themselves are the "side effect," not consumed by name.
"src/fastssv/__init__.py" = ["F401"]
